; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/util/extr_madeye.c_is_rmpp_mad.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/util/extr_madeye.c_is_rmpp_mad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_mad_hdr = type { i64, i32 }

@IB_MGMT_CLASS_SUBN_ADM = common dso_local global i64 0, align 8
@IB_MGMT_CLASS_VENDOR_RANGE2_START = common dso_local global i64 0, align 8
@IB_MGMT_CLASS_VENDOR_RANGE2_END = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ib_mad_hdr*)* @is_rmpp_mad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_rmpp_mad(%struct.ib_mad_hdr* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ib_mad_hdr*, align 8
  store %struct.ib_mad_hdr* %0, %struct.ib_mad_hdr** %3, align 8
  %4 = load %struct.ib_mad_hdr*, %struct.ib_mad_hdr** %3, align 8
  %5 = getelementptr inbounds %struct.ib_mad_hdr, %struct.ib_mad_hdr* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @IB_MGMT_CLASS_SUBN_ADM, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.ib_mad_hdr*, %struct.ib_mad_hdr** %3, align 8
  %11 = getelementptr inbounds %struct.ib_mad_hdr, %struct.ib_mad_hdr* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  switch i32 %12, label %14 [
    i32 129, label %13
    i32 128, label %13
    i32 130, label %13
  ]

13:                                               ; preds = %9, %9, %9
  store i32 1, i32* %2, align 4
  br label %31

14:                                               ; preds = %9
  br label %15

15:                                               ; preds = %14
  br label %30

16:                                               ; preds = %1
  %17 = load %struct.ib_mad_hdr*, %struct.ib_mad_hdr** %3, align 8
  %18 = getelementptr inbounds %struct.ib_mad_hdr, %struct.ib_mad_hdr* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @IB_MGMT_CLASS_VENDOR_RANGE2_START, align 8
  %21 = icmp sge i64 %19, %20
  br i1 %21, label %22, label %29

22:                                               ; preds = %16
  %23 = load %struct.ib_mad_hdr*, %struct.ib_mad_hdr** %3, align 8
  %24 = getelementptr inbounds %struct.ib_mad_hdr, %struct.ib_mad_hdr* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @IB_MGMT_CLASS_VENDOR_RANGE2_END, align 8
  %27 = icmp sle i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %22
  store i32 1, i32* %2, align 4
  br label %31

29:                                               ; preds = %22, %16
  br label %30

30:                                               ; preds = %29, %15
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %28, %13
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
